@@ -1,3 +1,9 @@
+2005-02-10  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.h (po_message_set_extracted_comments): New declaration.
+	* gettext-po.c (po_message_set_extracted_comments): New function.
+	Suggested by Asgeir Frimannsson <asgeirf@redhat.com>.
+
 2005-02-08  Bruno Haible  <bruno@clisp.org>
 
 	* msginit.c (get_user_email): Cast _() to 'char *', to avoid compiler
