@@ -1,3 +1,7 @@
+2005-02-10  Bruno Haible  <bruno@clisp.org>
+
+	* windows/gettextpo.def: Add po_message_set_extracted_comments.
+
 2005-02-07  Bruno Haible  <bruno@clisp.org>
 
 	* windows/gettextlib.def: Add c_strcasecmp, c_strncasecmp.
